// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component must be clicked on the favorite button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="sc-dlfnbm bUjLwp"
      >
        <div
          class="sc-eCssSg jGwyws"
        >
          <img
            alt="filme"
            class="sc-bdfBwQ fOwJSn"
            height="auto"
            loading="lazy"
            src="1"
            width="auto"
          />
        </div>
        <div
          class="sc-hKgILt hRElaA"
        >
          <strong
            class="sc-jSgupP hsPGzo"
          >
            filme
          </strong>
          <strong
            class="sc-jSgupP hsPGzo"
          >
            a
          </strong>
          <strong
            class="sc-jSgupP hsPGzo"
          >
            112
          </strong>
          <div
            class="sc-gKsewC bzJbYR"
          >
            <button
              class="sc-gsTCUz YPPtJ"
              type="submit"
            >
              Desfavoritar
            </button>
          </div>
        </div>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="sc-dlfnbm bUjLwp"
    >
      <div
        class="sc-eCssSg jGwyws"
      >
        <img
          alt="filme"
          class="sc-bdfBwQ fOwJSn"
          height="auto"
          loading="lazy"
          src="1"
          width="auto"
        />
      </div>
      <div
        class="sc-hKgILt hRElaA"
      >
        <strong
          class="sc-jSgupP hsPGzo"
        >
          filme
        </strong>
        <strong
          class="sc-jSgupP hsPGzo"
        >
          a
        </strong>
        <strong
          class="sc-jSgupP hsPGzo"
        >
          112
        </strong>
        <div
          class="sc-gKsewC bzJbYR"
        >
          <button
            class="sc-gsTCUz YPPtJ"
            type="submit"
          >
            Desfavoritar
          </button>
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ListItem component must be clicked on the unfavorite button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="sc-dlfnbm bUjLwp"
      >
        <div
          class="sc-eCssSg jGwyws"
        >
          <img
            alt="filme"
            class="sc-bdfBwQ fOwJSn"
            height="auto"
            loading="lazy"
            src="1"
            width="auto"
          />
        </div>
        <div
          class="sc-hKgILt hRElaA"
        >
          <strong
            class="sc-jSgupP hsPGzo"
          >
            filme
          </strong>
          <strong
            class="sc-jSgupP hsPGzo"
          >
            a
          </strong>
          <strong
            class="sc-jSgupP hsPGzo"
          >
            112
          </strong>
          <div
            class="sc-gKsewC bzJbYR"
          >
            <button
              class="sc-gsTCUz YPPtJ"
              type="submit"
            >
              Favoritar
            </button>
          </div>
        </div>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="sc-dlfnbm bUjLwp"
    >
      <div
        class="sc-eCssSg jGwyws"
      >
        <img
          alt="filme"
          class="sc-bdfBwQ fOwJSn"
          height="auto"
          loading="lazy"
          src="1"
          width="auto"
        />
      </div>
      <div
        class="sc-hKgILt hRElaA"
      >
        <strong
          class="sc-jSgupP hsPGzo"
        >
          filme
        </strong>
        <strong
          class="sc-jSgupP hsPGzo"
        >
          a
        </strong>
        <strong
          class="sc-jSgupP hsPGzo"
        >
          112
        </strong>
        <div
          class="sc-gKsewC bzJbYR"
        >
          <button
            class="sc-gsTCUz YPPtJ"
            type="submit"
          >
            Favoritar
          </button>
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ListItem component should render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="sc-dlfnbm bUjLwp"
      >
        <div
          class="sc-eCssSg jGwyws"
        >
          <img
            alt="filme"
            class="sc-bdfBwQ fOwJSn"
            height="auto"
            loading="lazy"
            src="1"
            width="auto"
          />
        </div>
        <div
          class="sc-hKgILt hRElaA"
        >
          <strong
            class="sc-jSgupP hsPGzo"
          >
            filme
          </strong>
          <strong
            class="sc-jSgupP hsPGzo"
          >
            a
          </strong>
          <strong
            class="sc-jSgupP hsPGzo"
          >
            112
          </strong>
          <div
            class="sc-gKsewC bzJbYR"
          >
            <button
              class="sc-gsTCUz YPPtJ"
              type="submit"
            >
              Favoritar
            </button>
          </div>
        </div>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="sc-dlfnbm bUjLwp"
    >
      <div
        class="sc-eCssSg jGwyws"
      >
        <img
          alt="filme"
          class="sc-bdfBwQ fOwJSn"
          height="auto"
          loading="lazy"
          src="1"
          width="auto"
        />
      </div>
      <div
        class="sc-hKgILt hRElaA"
      >
        <strong
          class="sc-jSgupP hsPGzo"
        >
          filme
        </strong>
        <strong
          class="sc-jSgupP hsPGzo"
        >
          a
        </strong>
        <strong
          class="sc-jSgupP hsPGzo"
        >
          112
        </strong>
        <div
          class="sc-gKsewC bzJbYR"
        >
          <button
            class="sc-gsTCUz YPPtJ"
            type="submit"
          >
            Favoritar
          </button>
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
